# itmo

./: .gitattributes  .gitignore  README.md
itmo_dynamic_array/: itmo_dynamic_array.sln
itmo_dynamic_array/dynamic_array/: Array.FastIterator.tpp  Array.Iterator.tpp  Array.h  Array.tpp  dynamic_array.vcxproj  dynamic_array.vcxproj.filters
itmo_dynamic_array/google_test/: DummiesTests.cpp  DummyCopyAndMove.h  DummyCopyOnly.h  IntTests.cpp  StringTest.cpp  TypedTests.cpp  google_test.vcxproj
itmo_hammurabi/: Config.h  EGameResult.h  Game.cpp  Game.h  GameplayLogic.cpp  GameplayLogic.h  Model.h  View.cpp  View.h  itmo_hammurabi.cpp  itmo_hammurabi.sln  itmo_hammurabi.vcxproj  itmo_hammurabi.vcxproj.filters
itmo_quick_sort/: itmo_quick_sort.sln  itmo_quick_sort.sln.DotSettings
itmo_quick_sort/dynamic_array/: Array.Iterator.tpp  Array.tpp  dynamic_array.cpp  dynamic_array.vcxproj
itmo_quick_sort/google_test/: TestHelpers.h  TestInsertSort.cpp  TestMedian.cpp  TestSort.cpp  TestSortDummies.cpp  TestSortDynamicArray.cpp  google_test.vcxproj
itmo_quick_sort/itmo_quick_sort/: QSort.h  QSort.tpp  itmo_quick_sort.cpp  itmo_quick_sort.vcxproj  itmo_quick_sort.vcxproj.filters
memory_manager/: memory_manager.sln
memory_manager/memory_manager/: AllocatorsHelpers.h  CoalesceAllocator.cpp  CoalesceAllocator.h  DebugAllocStats.cpp  DebugAllocStats.h  FSAllocator.cpp  (+13 more)
quick_sort/: CMakeLists.txt
quick_sort/google_tests/: CMakeLists.txt  Dummy.h  TestInsertSort.cpp  TestMedian.cpp  TestSortArrayInt.cpp  TestSortArrayString.cpp  TestSortDummies.cpp  TestSortVectorInt.cpp
(+5 files in other folders)
